<resources>
    <string name="app_name">Calculadora Basica II</string>
    <string name="login_title">Login</string>
    <string name="cadastro_title">Cadastro</string>
    <string name="perfil_title">Editar Perfil</string>
    <string name="menu_salute">Olá, Visitante"</string>
    <string name="nome_label">Nome:</string>
    <string name="nova_senha_label">Nova Senha:</string>
    <string name="nome_hint">Nome</string>
    <string name="nome_cad_hint">Seu nome</string>
    <string name="email_hint">E-mail</string>
    <string name="senha_hint">Senha</string>
    <string name="confirma_hint">Confirmar senha</string>
    <string name="nova_senha_hint">Digite a nova senha</string>
    <string name="confirma_nova_senha_hint">Confirme a nova senha</string>
    <string name="login_action">Entrar</string>
    <string name="cadastro_action">Criar Conta</string>
    <string name="salvar_action">Salvar Alterações</string>
    <string name="link_cadastro">Ainda não tem conta? Cadastre-se</string>
    <string name="link_acessar_calculadora">Acessar Calculadora</string>
    <string name="link_perfil">Atualizar Cadastro</string>
    <string name="link_sair">Sair</string>
    <string name="link_login">Já tem conta? Login</string>
    <string name="Link_cancelar">Cancelar e Voltar</string>
    <string name="display_text">0</string>
    <string name="close_app">X</string>
    <string name="calculo_text"></string>
    <string name="delete">del</string>
    <string name="clear">C</string>
    <string name="percent">%</string>
    <string name="dividir">/</string>
    <string name="multiplicar">*</string>
    <string name="subtracao">-</string>
    <string name="soma">+</string>
    <string name="igual">=</string>
    <string name="sinal">+/-</string>
    <string name="virgula">,</string>
    <string name="zero">0</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>

</resources>